--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@icons/*": ["./src/constants/icons/*"],
       "@components/*": ["./src/components/*"],
+      "@constants/*": ["./src/constants/*"],
       "@helpers/*": ["./src/helpers/*"],
       "@store/*": ["./src/store/*"],
       "@views/*": ["./src/views/*"]
